# backend/Api/Controllers/TransactionController.ts
@@ -11,40 +11,79 @@ export default class TransactionController {
   ): Promise<Response> => {
     try {
       /*
-                #swagger.tags = ['Transactions']
-                #swagger.summary = 'Tạo giao dịch'
-                #swagger.description = 'Endpoint để tạo giao dịch'
-
-                #swagger.parameters['body'] = {
-                    in: 'body',
-                    description: 'Transaction data',
-                    required: true,
-                    schema: {
-                        userId: '1',
-                        orderStatus: 'pending',
-                        totalValue: '1000',
-                        paymentMethod: 'cash',
-                     }
+        #swagger.tags = ['Transactions']
+        #swagger.summary = 'Tạo giao dịch'
+        #swagger.description = 'Endpoint để tạo giao dịch với danh sách các item'
+        #swagger.parameters['body'] = {
+            in: 'body',
+            description: 'Transaction data including items',
+            required: true,
+            schema: {
+              userId: '609c0b1f531123456789abcd',
+              orderStatus: 'pending',
+              totalValue: 1000,
+              paymentMethod: 'cash',
+              items: [
+                {
+                  productId: '609c0b1f531123456789abce',
+                  variantId: '609c0b1f531123456789abcf',
+                  quantity: 2,
+                  purchasePrice: 500
                 }
-             */
-      const query = req.query;
-      const result = await this.transactionServices.createTransaction(query);
-      return res.status(200).json(result);
+              ]
+            }
+      }
+      */
+      const { userId, orderStatus, totalValue, paymentMethod, items } =
+        req.body;
+
+      const transactionData = {
+        userId,
+        orderStatus,
+        totalValue,
+        paymentMethod,
+        items,
+      };
+
+      // Forward the data to TransactionServices to handle business logic later
+      const result =
+        await this.transactionServices.createTransaction(transactionData);
+
+      return res.status(201).json(result);
     } catch (error: any) {
       return res.status(500).json({ message: error.message });
     }
   };
-  getTransactionById = async (
+
+  getAllTransactions = async (
     req: Request,
     res: Response,
   ): Promise<Response> => {
     try {
       /*
-                #swagger.tags = ['Transactions']
-                #swagger.summary = 'Lấy thông tin giao dịch'
-                #swagger.description = 'Endpoint để lấy thông tin giao dịch theo Id'
-             */
-      const transactionId = req.params.transactionId;
+        #swagger.tags = ['Transactions']
+        #swagger.summary = 'Lấy danh sách giao dịch'
+        #swagger.description = 'Endpoint để lấy danh sách giao dịch'
+      */
+      const query = req.query;
+      const result = await this.transactionServices.getAllTransactions(query);
+      return res.status(200).json(result);
+    } catch (error: any) {
+      return res.status(500).json({ message: error.message });
+    }
+  };
+
+  getTransactionById = async (
+    req: Request,
+    res: Response,
+  ): Promise<Response> => {
+    try {
+      const { transactionId } = req.params;
+      /*
+        #swagger.tags = ['Transactions']
+        #swagger.summary = 'Lấy thông tin giao dịch'
+        #swagger.description = 'Endpoint để lấy thông tin giao dịch theo Id'
+      */
       const result =
         await this.transactionServices.getTransactionById(transactionId);
       return res.status(200).json(result);
@@ -52,6 +91,7 @@ export default class TransactionController {
       return res.status(500).json({ message: error.message });
     }
   };
+
   getUserTransactions = async (
     req: Request,
     res: Response,
@@ -92,16 +132,27 @@ export default class TransactionController {
     res: Response,
   ): Promise<Response> => {
     try {
+      const { transactionId, orderStatus } = req.body;
       /*
-                #swagger.tags = ['Transactions']
-                #swagger.summary = 'Cập nhật trạng thái giao dịch'
-                #swagger.description = 'Endpoint để cập nhật trạng thái giao dịch theo Id'
-             */
-      const transactionId = req.params.transactionId;
-      const query = req.query;
-      const result =
-        await this.transactionServices.updateTransactionStatus(query);
-      return res.status(200).json(result);
+        #swagger.tags = ['Transactions']
+        #swagger.summary = 'Cập nhật trạng thái giao dịch'
+        #swagger.description = 'Endpoint để cập nhật trạng thái của giao dịch'
+        #swagger.parameters['body'] = {
+            in: 'body',
+            description: 'Transaction status update data',
+            required: true,
+            schema: {
+              transactionId: "609c0b1f531123456789abcd",
+              orderStatus: "completed"
+            }
+        }
+      */
+      const updatedTransaction =
+        await this.transactionServices.updateTransactionStatus({
+          transactionId,
+          orderStatus,
+        });
+      return res.status(200).json(updatedTransaction);
     } catch (error: any) {
       return res.status(500).json({ message: error.message });
     }
