# backend/Api/Routes/ProductRoutes.ts
@@ -8,11 +8,16 @@ const productController = new ProductController();
 router.get('/products', productController.getAllProducts);
 // router.post('/products', productController.createProduct);
 router.get('/products/:productId', productController.getProductById);
+// Get products by variantId
+router.get('/product/variant/:variantId', productController.getProductByVariantId);
 router.put('/products/:productId', productController.updateProduct);
 router.delete('/products/:productId', productController.deleteProduct);
 
 //create product with many variants at once
 router.post('/products/variants', productController.createProductWithVariants);
+
+//get an product and its variants
+router.get('/variants/product/:productId', productController.getProductAndVariants);
 
 // Variant routes
 router.post('/products/:productId/variants', productController.createVariant);
@@ -28,6 +33,6 @@ router.put('/categories/:categoryId', productController.updateCategory);
 // Tag routes
 router.post('/products/add-tag', productController.addTagToProduct);
 router.delete('/products/:productId/tags/:tagId', productController.removeTagFromProduct);
-// router.get('/tags/:id/products', productController.getProductsByTag);
+// router.get('/tags/:[id]/products', productController.getProductsByTag);
 
 export default router;
